skan_tests/error/returnBool.sk
int main()
{
    return 1;
}

bool hi()
{
    return true;
}

bool hi2()
{
    return false;
}

